<?xml version="1.0"?>
<package>
  <name>uibk_moveit_adapter</name>
  <version>0.0.0</version>
  <description>The uibk_moveit_adapter package</description>

  <maintainer email="martin.griesser@student.uibk.ac.at">Martin Griesser</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>actionlib</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
