<?xml version="1.0"?>
<package>
  <name>uibk_moveit_tools</name>
  <version>0.0.0</version>
  <description>moveit tools metapackage</description>

  <maintainer email="simon.hangl@uibk.ac.at">simon hangl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>iis_fast_ik</run_depend>
  <run_depend>iis_robot_dep</run_depend>
  <run_depend>uibk_robot_moveit_config</run_depend>
  <run_depend>uibk_planning_node</run_depend>
  <run_depend>uibk_moveit_adapter</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <metapackage />
  </export>
  
</package>

